Support MinVR CMakeLists being included using add_subdirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@
 cmake_minimum_required (VERSION 3.9)
 
 cmake_policy(SET CMP0048 NEW)
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
 
 message(STATUS ${CMAKE_MODULE_PATH})
 
@@ -164,7 +164,6 @@ endif()
 # find_package() searches.
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX})
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_INSTALL_PREFIX})
-
 
 # These are relative to ${CMAKE_INSTALL_PREFIX}
 set(INSTALL_BIN_DEST           bin)
