G3D rendering and HMD support. The view matrix is not working properly

--- a/plugins/G3D/CMakeLists.txt
+++ b/plugins/G3D/CMakeLists.txt
@@ -21,10 +21,14 @@ set (SOURCEFILES
   src/VRG3DPlugin.cpp
   src/VRG3DWindowToolkit.cpp
   src/VRG3DInputDevice.cpp
+  src/VRG3DGraphicsToolkit.cpp
+  src/VRG3DGraphicsWindowNode.cpp
 )
 set (HEADERFILES
   src/VRG3DWindowToolkit.h
   src/VRG3DInputDevice.h
+  src/VRG3DGraphicsToolkit.h
+  src/VRG3DGraphicsWindowNode.h
 )
 
 
