added G3D Display node to the cmake project added VRG3DAPP to tje opengl-shaderpipeline-with-api  Project

--- a/plugins/G3D/CMakeLists.txt
+++ b/plugins/G3D/CMakeLists.txt
@@ -22,13 +22,13 @@ set (SOURCEFILES
   src/VRG3DWindowToolkit.cpp
   src/VRG3DInputDevice.cpp
   src/VRG3DGraphicsToolkit.cpp
-  src/VRG3DGraphicsWindowNode.cpp
+  src/VRG3DDisplayNode.cpp
 )
 set (HEADERFILES
   src/VRG3DWindowToolkit.h
   src/VRG3DInputDevice.h
   src/VRG3DGraphicsToolkit.h
-  src/VRG3DGraphicsWindowNode.h
+  src/VRG3DDisplayNode.h
 )
 
 
