--- a/plugins/G3D/CMakeLists.txt
+++ b/plugins/G3D/CMakeLists.txt
@@ -97,9 +97,9 @@ install(TARGETS ${PROJECT_NAME} EXPORT MinVRTargets COMPONENT ${PROJECT_NAME}
     ARCHIVE DESTINATION ${INSTALL_PLUGINLIB_DEST}
     RUNTIME DESTINATION ${INSTALL_PLUGINDLL_DEST}
 )
-install(FILES ${HEADERFILES} DESTINATION ${INSTALL_PLUGININCLUDE_DEST}/${PROJECT_NAME} COMPONENT ${PROJECT_NAME})
+install(FILES ${VRG3DHEADERFILES} DESTINATION ${INSTALL_PLUGININCLUDE_DEST}/${PROJECT_NAME} COMPONENT ${PROJECT_NAME})
 
 
 # For better organization when using an IDE with folder structures:
-source_group("Header Files" FILES ${HEADERFILES})
+source_group("Header Files" FILES ${VRG3DHEADERFILES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER "plugins")
