added Photon Plugin for collaborative VR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -406,6 +406,15 @@ minvr_optional_adddir(
   "plugins/G3D"
 )
 
+
+#---- Photon Plugin ----
+minvr_optional_adddir(
+  WITH_PLUGIN_PHOTON
+  "PhotonEngine Plugin"
+  "(Requires PhotonEngine to be downloaded and manually installed from https://www.photonengine.com/)"
+  "plugins/Photon"
+)
+
 # ---- Plugins that Provide a Window Toolkit ----
 # Save a list of plugins that provide a window toolkit so that we can error out
 # if building a graphics program and no window toolkit is available.
