--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -502,7 +502,7 @@ endif()
 minvr_optional_adddir(
   WITH_ITEST_G3D 
   "itest-G3D-example"
-  "(Requires the G3D Plugin" 
+  "(Requires the G3D Plugin)" 
   "tests-interactive/g3d-example"
 )
 
@@ -514,6 +514,12 @@ minvr_optional_adddir(
 #  "tests-interactive/pythonbindings-opengl" 
 #)
 
+minvr_optional_adddir(
+  WITH_GAMEPAD_TEST
+  "itest-gamepad-opengl-shaderpipeline-with-api"
+  "(Requires Gainput plugin)" 
+  "tests-interactive/gamepad-with-opengl-shaderpipeline"
+)
 
 
 
