--- a/plugins/OpenVR/CMakeLists.txt
+++ b/plugins/OpenVR/CMakeLists.txt
@@ -87,6 +87,9 @@ install(TARGETS ${PROJECT_NAME} EXPORT MinVRTargets COMPONENT ${PROJECT_NAME}
     ARCHIVE DESTINATION ${INSTALL_PLUGINLIB_DEST}
     RUNTIME DESTINATION ${INSTALL_PLUGINDLL_DEST}
 )
+
+message(status "Openvr install")
+message(status "INSTALL_PLUGININCLUDE_DEST ${INSTALL_PLUGININCLUDE_DEST}/${PROJECT_NAME}")
 install(FILES ${HEADERFILES} DESTINATION ${INSTALL_PLUGININCLUDE_DEST}/${PROJECT_NAME} COMPONENT ${PROJECT_NAME})
 
 
